--- a/proxy_groups/priority_routing/AsiaPriorityRouting.yaml
+++ b/proxy_groups/priority_routing/AsiaPriorityRouting.yaml
@@ -1,6 +1,7 @@
 - name: "JP-PRIORITY-ROUTING"
   type: fallback
   use:
+    - JP-IEPL-PRE
     - JP-IEPL-AIR
     ++asia_default++
   url: 'http://www.gstatic.com/generate_204'
@@ -9,6 +10,7 @@
 - name: "HK-PRIORITY-ROUTING"
   type: fallback
   use:
+    - HK-IEPL-PRE
     - HK-IEPL-STD
     - HK-IEPL-AIR
     ++asia_default++
@@ -18,6 +20,7 @@
 - name: "SG-PRIORITY-ROUTING"
   type: fallback
   use:
+    - SG-IEPL-PRE
     - SG-IEPL-STD
     - SG-IEPL-AIR
     ++asia_default++
@@ -27,6 +30,7 @@
 - name: "TW-PRIORITY-ROUTING"
   type: fallback
   use:
+    - TW-IEPL-PRE
     - TW-IEPL-STD
     - TW-IEPL-AIR
     ++asia_default++
