--- a/proxy_providers/HongKong.yaml
+++ b/proxy_providers/HongKong.yaml
@@ -1,3 +1,14 @@
+HK-IEPL-PRE:
+  type: http
+  url: https://dler.cloud/subscribe/DLER_SUBSCRIBE_TOKEN?protocols=smart&provider=clash&realy=true&udp=true&tfo=true&area=hk&match=IEPL.*Pre
+  interval: 345600
+  path: ./profiles/proxies/hk-iepl-pre.provider
+  health-check:
+    enable: true
+    interval: 600
+    # lazy: true
+    url: http://www.gstatic.com/generate_204
+
 HK-IEPL-STD:
   type: http
   url: https://dler.cloud/subscribe/DLER_SUBSCRIBE_TOKEN?protocols=smart&provider=clash&realy=true&udp=true&tfo=true&area=hk&match=IEPL.*Std
