--- a/proxy_providers/Japan.yaml
+++ b/proxy_providers/Japan.yaml
@@ -1,3 +1,14 @@
+JP-IEPL-PRE:
+  type: http
+  url: https://dler.cloud/subscribe/DLER_SUBSCRIBE_TOKEN?protocols=smart&provider=clash&realy=true&udp=true&tfo=true&area=jp&match=IEPL.*Pre
+  interval: 345600
+  path: ./profiles/proxies/jp-iepl-pre.provider
+  health-check:
+    enable: true
+    interval: 600
+    # lazy: true
+    url: http://www.gstatic.com/generate_204
+
 JP-IEPL-AIR:
   type: http
   url: https://dler.cloud/subscribe/DLER_SUBSCRIBE_TOKEN?protocols=smart&provider=clash&realy=true&udp=true&tfo=true&area=jp&match=IEPL.*Air
